@@ -1,43 +1,0 @@
-/**
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package org.apache.hadoop.hdfs.util;
-
-import java.util.concurrent.ThreadFactory;
-
-import org.apache.hadoop.classification.InterfaceAudience;
-import org.apache.hadoop.classification.InterfaceStability;
-import org.apache.hadoop.util.Daemon;
-
-/**
- * Provide a factory for named daemon threads,
- * for use in ExecutorServices constructors
- * 
- * TODO:FEDERATION This should become an inner class of the 
- * org.apache.hadoop.util.Daemon class
- * after Federation is united with trunk.
- */
-@InterfaceAudience.Private
-@InterfaceStability.Unstable
-public class DaemonFactory extends Daemon implements ThreadFactory {
-
-  public Thread newThread(Runnable runnable) {
-    return new Daemon(runnable);
-  }
-
-}
